@@ -6,7 +6,6 @@ DESIGN
 HIGHEST
 
 HIGH
-- PHUtils.toTimesTenString appears to be buggy, eg shows H3O concentration of '0.0000016' for 'Chicken Soup'
 - add interactivity to H3O and OH indicators in Custom screen
 - Custom: interactive linear graph, zoom feature
 - 'H3O+/OH- ratio' feature
@@ -17,6 +16,7 @@ MEDIUM
 - change look of label that is 'on' for ABSwitch
 - ComboBox: add background color behind arrow button (sun#43)
 - don't update things that aren't visible (Molecule counts, Ratio, collapsed pH meter, collapsed graph)
+- Molecule counts: '4.0 x 10^25' should be displayed as '4.00 x 10^25'
 
 LOW
 - scale down the 'Molecule counts' feature?
