@@ -15,16 +15,19 @@ define( function( require ) {
     /*
      * Converts a number to a format like 1.23 x 10^25
      * @param {Number} value the number to be formatted
-     * @param {Number} precision how many digits in the mantissa
+     * @param {Number} decimalPlaces how many digits after the decimal point
      * @param {Number} constantExponent optional constant exponent, may affect precision of mantissa, optional
      * @return {String} HTML fragment
      */
-    toTimesTenString: function( value, precision, constantExponent ) {
+    toTimesTenString: function( value, decimalPlaces, constantExponent ) {
       if ( value === 0 ) {
         return '0';
       }
+      else if ( constantExponent === 0 ) {
+        return Util.toFixed( value, decimalPlaces );
+      }
       else {
-        var precisionString = value.toPrecision( precision ); // eg, 12345 -> 1.23e+4
+        var precisionString = value.toExponential( decimalPlaces ); // eg, 12345 -> 1.23e+4
         var tokens = precisionString.toLowerCase().split( 'e' ); //TODO will this work in all browsers?
         if ( tokens.length === 1 ) {
           return tokens[0]; // no exponent, return the mantissa
@@ -32,8 +35,8 @@ define( function( require ) {
         else {
           var mantissaString = tokens[0];
           var exponentString = tokens[1];
-          if ( constantExponent !== undefined ) {
-            mantissaString = Util.toFixed( parseFloat( mantissaString ) * Math.pow( 10, parseInt( exponentString, 10 ) - constantExponent ), precision - 1 );
+          if ( constantExponent !== undefined && constantExponent !== null ) {
+            mantissaString = Util.toFixed( parseFloat( mantissaString ) * Math.pow( 10, parseInt( exponentString, 10 ) - constantExponent ), Math.max( 0, decimalPlaces - 1 ) );
             exponentString = constantExponent.toString();
           }
           return mantissaString + ' x 10<span style="font-size:85%"><sup>' + parseInt( exponentString, 10 ) + '</sup></span>'; // mantissa x 10^exponent
